done transactions, objects and docs, by until next week
